--- a/src/app/components/category/category.component.html
+++ b/src/app/components/category/category.component.html
@@ -1,7 +1,10 @@
 <ul class="list-group">
-    <li (click)="setCurrentCategory(category)" *ngFor="let category of categories" 
+  <li [class]="getAllCategoryClass()" routerLink= "/products">All Products</li>
+    <li (click)="setCurrentCategory(category)"
     routerLink= "/products/category/{{category.categoryId}}"
-    [class]="getCurrentCategoryClass(category)">{{category.categoryName}}</li>
+    *ngFor="let category of categories" 
+    [class]="getCurrentCategoryClass(category)">
+    {{category.categoryName}}</li>
   </ul>
 
   <h5 *ngIf="currentCategory">{{currentCategory.categoryName}} seçtiniz</h5>
